地址作业开发

--- a/apps/imeep/colEditor/colEditor.html
+++ b/apps/imeep/colEditor/colEditor.html
@@ -17,8 +17,7 @@
         <script type="text/javascript" src="../Application.js"></script>
         <script type="text/javascript" src="../../../scripts/fastmap/fastmap.js"></script>
         <script type="text/javascript" src="../../../scripts/fastmap/fastmap-util.js"></script>
-        <script type="text/javascript" src="../../../scripts/dataApi/dataApi-poi.js"></script>
-        <script type="text/javascript" src="../../../scripts/dataApi/dataApi-road.js"></script>
+        <script type="text/javascript" src="../../../scripts/dataApi/dataApi-column.js"></script>
         <script src="loadMapApi.js"></script>
         <script src="loadUikit.js"></script>
     </head>
@@ -49,8 +48,8 @@
                                 </a>
                             </div>
                             <div style="position: absolute;bottom: 20px;left: 50px;">
-                                <button type="button" class="btn btn-xs btn-shape"  ng-click=""> 申请数据 </button>
-                                <button type="button" class="btn btn-xs btn-shape"  ng-click=""> 提交数据 </button>
+                                <button type="button" class="btn btn-shape btn-ls"  ng-click=""> 申请数据 </button>
+                                <button type="button" class="btn btn-shape btn-ls"  ng-click=""> 提交数据 </button>
                             </div>
                         </div>
                     </div>
