clm图形编辑和要素进入退出线的限制

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/timepicki/css/timepicki.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/font-awesome-4.6.3/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="../../../scripts/libs/bootstrap-datepicker/css/datepicker3.css">
+        <link rel="stylesheet" type="text/css" href="../../../scripts/libs/srs/srs.css">
         <script src="../../../scripts/libs/leaflet-0.7.3/leaflet-src.js"></script>
         <script src="../../../scripts/libs/leaflet-0.7.3/plugins/wicket.js"></script>
         <script type="text/javascript" src="../Application.js"></script>
