--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -14,6 +14,7 @@
         <script src="../../scripts/libs/angularjs/1.4.4/angular.min.js"></script>
         <script src="../../scripts/libs/angularjs/1.4.4/angular-cookies.min.js"></script>
         <script src="../../scripts/components/directives/fastmap-uikit-all.js"></script>
+        <script src="../../scripts/libs/jquery/jquery-1.11.1.js"></script>
         <script src="./Application.js"></script>
         <script src="./service/dataService.js"></script>
         <script src="./service/dataService-manage.js"></script>
