--- a/apps/imeep/colEditor/colEditor.html
+++ b/apps/imeep/colEditor/colEditor.html
@@ -50,7 +50,7 @@
                             </div>
                             <div style="position: absolute;bottom: 20px;left: 50px;">
                                 <button type="button" class="btn btn-shape btn-ls"  ng-click="applyData();"> 申请数据 </button>
-                                <button type="button" class="btn btn-shape btn-ls"  ng-click=""> 提交数据 </button>
+                                <button type="button" class="btn btn-shape btn-ls"  ng-click="submitData();"> 提交数据 </button>
                             </div>
                         </div>
                     </div>
