--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -63,21 +63,6 @@
                     </div>
                     <div ui-layout-container class="fm-no-scroll">
                         <div id="map" style="background-color:#F0F4F8;width: 100%;height: 100%;">
-                            <!-- <div id="toolsDiv" style="left:5px;top:5px;height: 40px;position: absolute;z-index:1;background-color: transparent">
-                                    <div class="btn-toolbar" style="margin-left: 0px">
-                                        <div ng-include="selectShapeURL" style="float: left"></div>
-                                        <div ng-include="selectPoiURL" style="float: left"></div>
-                                        <div ng-include="addPoiURL" style="float: left;"></div>
-                                        <div ng-include="addShapeURL" style="float: left;"></div>
-                                        <div ng-include="modifyToolURL" style="float: left"></div>
-                                        <div ng-include="selectAdShapeURL" style="float: left"></div>
-                                        <div ng-include="addAdShapeURL" style="float: left;"></div>
-                                        <div ng-include="selectRwShapeURL" style="float: left"></div>
-                                        <div ng-include="addRwShapeURL" style="float: left"></div>
-                                        <div ng-include="selectZoneShapeURL" style="float: left"></div>
-                                        <div ng-include="addZoneShapeURL" style="float: left"></div>
-                                    </div>
-                            </div> -->
                             <div class="div-float map-toolbar" style="top:0px;left:100px;">
                                 <button type="button" class="btn btn-xs btn-shape" ng-class="{'search':'active'}[advancedTool]" ng-click="openAdvancedToolsPanel('search')">搜 索 <img ng-src="{{appPath.root}}images/poi/icon/loading-cycle.gif" ng-if="searching"></button>
                                 <button type="button" class="btn btn-xs btn-shape" ng-class="{'auto':'active'}[advancedTool]" ng-click="openAdvancedToolsPanel('auto')">自动录入 <img ng-src="{{appPath.root}}images/poi/icon/loading-cycle.gif" ng-if="autofillRunning"></button>
@@ -92,7 +77,7 @@
                             </div>
                         </div>
                         <!--右侧属性编辑面板-->
-                        <div class="fm-foldable fm-col" style="width:315px;top:0px;" ng-style="{'right':{true: '0px', false: '-300px', 'none': '-315px'}[editorPanelOpened]}">
+                        <div class="fm-foldable fm-col" style="width:315px;top:0px" ng-style="{'right':{true: '0px', false: '-300px', 'none': '-315px'}[editorPanelOpened]}">
                             <div class="fm-fold-btn">
                                 <a href="#" ng-class="{true: 'arrow-right', false: 'arrow-left'}[editorPanelOpened]" ng-click="editorPanelOpened=!editorPanelOpened">
                                 </a>
@@ -161,6 +146,7 @@
                 <img ng-src="{{pImageNow.originUrl}}"/>
             </div>
         </div>
+
         <div ng-show="showLoading" id="loadingAnimate" class="show-animation" ng-include="'svgLoading.html'"></div>
         <div id="dataTipsOriginModal" style="display:none">
             <div ng-include="tipsPitureContainer" style="height: 100%;width: 100%"></div>
