--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -161,7 +161,7 @@
         </div>
         <!-- <div id="fullScalePic" ng-show="roadFullScreen" ng-click="hideFullPic();"><img src=""></div> -->
         <!-- logMsg提示 -->
-        <div class="log-message-container">
+        <div class="log-message-container" ng-style="logMsgStyle">
           <div class="log-message animated-fast fadeInLeft" ng-repeat="msg in logMessage">
             {{msg.value}}
             <div class="log-message-remove" ng-click="msg.remove(msg);">
