--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -73,8 +73,8 @@
                             <div ng-include="mapToolbar" class="div-float map-toolbar" ng-style="{top:'0px',left:'290px'}"></div>
                             <!-- <div ng-include="specialOperationToolbar" class="div-float map-toolbar" style="top:0px;left:580px;"></div> -->
                             <div id="zoomLevelBar" class="div-float" style="bottom:5px;left:5px;width:100px;"></div>
-                            <div ng-show="advancedTool!=null" class="div-float animated-fast fadeInDown" style="top:80px;left:10%;right:10%;border-radius:5px;">
-                                <button type="button" class="close" style="padding:0px 4px;" ng-click="closeAdvancedToolsPanel()"><span>&times;</span></button>
+                            <div ng-show="advancedTool!=null" class="div-float animated-fast fadeInDown" style="top:80px;left:15%;right:15%;border-radius:5px;">
+                                <button type="button" class="close" ng-click="closeAdvancedToolsPanel()"><span style="position: relative;right: 10px;top: 5px;">&times;</span></button>
                                 <div ng-include="advancedToolPanelTpl"></div>
                             </div>
                         </div>
