修改可变限速bug

--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -119,7 +119,7 @@
                         </div>
                         <!--下方输出信息面板-->
                         <div class="fm-foldable fm-row" style="height:255px;left:2px;width:auto;" ng-style="{'bottom':{true: '0px', false: '-240px'}[consolePanelOpened], right: {true: '302px', false: '2px', 'none': '2px'}[editorPanelOpened]}">
-                            <div style="z-index: 10000" class="fm-fold-btn">
+                            <div class="fm-fold-btn">
                                 <a href="#" ng-class="{true: 'arrow-down', false: 'arrow-up'}[consolePanelOpened]" ng-click="consolePanelOpened=!consolePanelOpened">
                                 </a>
                             </div>
