--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -22,7 +22,7 @@
         <script src="../../../scripts/libs/leaflet-0.7.3/leaflet-src.js"></script>
         <script src="../../../scripts/libs/leaflet-0.7.3/plugins/wicket.js"></script>
         <script src="../../../scripts/libs/leaflet-0.7.3/plugins/Control.MiniMap.js"></script>
-        <script type="text/javascript" language="JavaScript" src="../Application.js"></script>
+        <script type="text/javascript" src="../Application.js"></script>
         <script type="text/javascript" src="../../../scripts/fastmap/fastmap.js"></script>
         <script type="text/javascript" src="../../../scripts/fastmap/fastmap-util.js"></script>
         <script type="text/javascript" src="../../../scripts/dataApi/dataApi-poi.js"></script>
