子任务修改去掉采集类别

--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -26,12 +26,12 @@
             <div ui-layout-container class="fm-banner animated fadeInLeft fm-no-scroll" size="50px">
                 <div class="banner-top"><a><strong>FM</strong></a></div>
                 <div style="margin-top:20px" class="banner-center">
-                    <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="POI采集" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{1: 'selected'}[dataListType]" ng-click="changeDataList(1)">
-                        <a><i class="fa fa-map-o" aria-hidden="true"></i></a>
-                    </div>
-                    <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="道路采集" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{2: 'selected'}[dataListType]" ng-click="changeDataList(2)">
-                        <a><i class="fa fa-road" aria-hidden="true"></i></a>
-                    </div>
+                    <!--<div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="POI采集" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{1: 'selected'}[dataListType]" ng-click="changeDataList(1)">-->
+                        <!--<a><i class="fa fa-map-o" aria-hidden="true"></i></a>-->
+                    <!--</div>-->
+                    <!--<div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="道路采集" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{2: 'selected'}[dataListType]" ng-click="changeDataList(2)">-->
+                        <!--<a><i class="fa fa-road" aria-hidden="true"></i></a>-->
+                    <!--</div>-->
                     <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="一体化采集" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{3: 'selected'}[dataListType]" ng-click="changeDataList(3)">
                         <a><i class="fa fa-list-alt" aria-hidden="true"></i></a>
                     </div>
