--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -32,9 +32,9 @@
                     <!--<div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="道路采集" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{2: 'selected'}[dataListType]" ng-click="changeDataList(2)">-->
                         <!--<a><i class="fa fa-road" aria-hidden="true"></i></a>-->
                     <!--</div>-->
-                    <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="一体化采集" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{3: 'selected'}[dataListType]" ng-click="changeDataList(3)">
-                        <a><i class="fa fa-list-alt" aria-hidden="true"></i></a>
-                    </div>
+                    <!--<div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="一体化采集" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{3: 'selected'}[dataListType]" ng-click="changeDataList(3)">-->
+                        <!--<a><i class="fa fa-list-alt" aria-hidden="true"></i></a>-->
+                    <!--</div>-->
                     <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="POI 日编" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{4: 'selected'}[dataListType]" ng-click="changeDataList(4)">
                         <a><i class="fa fa-map-marker" aria-hidden="true"></i></a>
                     </div>
