子任务修改去掉采集类别

--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -62,12 +62,12 @@
                     <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="道路区域" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{22: 'selected'}[dataListType]" ng-click="changeDataList(22)">
                         <a><i class="fa fa-delicious" aria-hidden="true"></i></a>
                     </div>
-                    <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="深度信息专项作业" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{6: 'selected'}[dataListType]" ng-click="changeDataList(6)">
-                        <a><i class="fa fa-newspaper-o" aria-hidden="true"></i></i></a>
-                    </div>
-                    <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="POI精编任务选择" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{7: 'selected'}[dataListType]" ng-click="changeDataList(7)">
-                        <a><i class="fa fa-pencil-square-o" aria-hidden="true"></i></i></a>
-                    </div>
+                    <!--<div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="深度信息专项作业" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{6: 'selected'}[dataListType]" ng-click="changeDataList(6)">-->
+                        <!--<a><i class="fa fa-newspaper-o" aria-hidden="true"></i></i></a>-->
+                    <!--</div>-->
+                    <!--<div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="POI精编任务选择" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{7: 'selected'}[dataListType]" ng-click="changeDataList(7)">-->
+                        <!--<a><i class="fa fa-pencil-square-o" aria-hidden="true"></i></i></a>-->
+                    <!--</div>-->
 
                 </div>
                 <div class="banner-bottom">
