--- a/apps/imeep/task/taskSelection.html
+++ b/apps/imeep/task/taskSelection.html
@@ -51,7 +51,7 @@
                         <a><i class="fa fa-shopping-bag" aria-hidden="true"></i></a>
                     </div>
                     <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="POI专项" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{19: 'selected'}[dataListType]" ng-click="changeDataList(19)">
-                        <a><i class="fa fa-ticket" aria-hidden="true"></i></a>
+                        <a><i class="fa fa-ticket" aria-hidden="true"></i></a><!--深度信息专项作业/POI精编任务选择-->
                     </div>
                     <div style="padding:6px" tooltip-class="subTooltip" uib-tooltip="道路Grid精编" tooltip-trigger="mouseenter" tooltip-placement="right" tooltip-append-to-body=true ng-class="{20: 'selected'}[dataListType]" ng-click="changeDataList(20)">
                         <a><i class="fa fa-th" aria-hidden="true"></i></a>
