修改登录界面

--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -21,23 +21,14 @@
         <script src="./loginCtrl.js"></script>
     </head>
     <body ng-controller="loginCtrl">
-        <div id="navibar" class="container-fluid">
-            <div class="navbar-header">
-                <h1>FastMap | 一体化编辑平台</h1>
-            </div>
-        </div>
         <!-- main login part -->
         <div class="wrapper container">
-            <div class="col-sm-6 left_part">
-                <div class="container login">
+            <div class="loginDiv">
+                <div style="font-size: 14px">
                     <!--<div class="company-logo"></div>-->
                     <login valid-type="1"></login>
                 </div>
             </div>
         </div>
-
-        <footer class="bs-docs-footer" style="">
-            <small>Copyright©2014　　　　北京四维图新科技股份有限公司</small>
-        </footer>
     </body>
 </html>
