--- a/apps/imeep/login.html
+++ b/apps/imeep/login.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html ng-app='loginApp' style="height: 100%">
-    <head>
-        <title>FastMap-一体化编辑平台-登录</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta http-equiv="content-script-type" content="text/javascript">
-        <link href="../../scripts/libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <link href="../../scripts/libs/bootstrap-3.3.5/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
-        <link href="../../scripts/libs/sweet-alert/css/sweet-alert.css" rel="stylesheet" type="text/css"/>
-        <link href="../../styles/imeep/login2.css" rel="stylesheet" type="text/css" />
-        <script src="../../scripts/libs/sweet-alert/js/sweet-alert.js"></script>
-        <script src="../../scripts/libs/angularjs/1.4.4/angular.min.js"></script>
-        <script src="../../scripts/libs/angularjs/1.4.4/angular-cookies.min.js"></script>
-        <script src="../../scripts/components/directives/fastmap-uikit-all.js"></script>
-        <script src="../../scripts/libs/jquery/jquery-1.11.1.js"></script>
-        <script src="./Application.js"></script>
-        <script src="./service/dataService.js"></script>
-        <script src="./service/dataService-manage.js"></script>
-        <script src="./loginCtrl.js"></script>
-    </head>
-    <body ng-controller="loginCtrl">
-        <!-- main login part -->
-        <div class="wrapper container">
-            <div class="loginDiv">
-                <div style="font-size: 14px">
-                    <!--<div class="company-logo"></div>-->
-                    <login valid-type="1"></login>
-                </div>
+<head>
+    <title>FastMap-一体化编辑平台-登录</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="content-script-type" content="text/javascript">
+    <link href="../../scripts/libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="../../scripts/libs/bootstrap-3.3.5/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
+    <link href="../../scripts/libs/sweet-alert/css/sweet-alert.css" rel="stylesheet" type="text/css"/>
+    <link href="../../styles/imeep/login2.css" rel="stylesheet" type="text/css"/>
+    <script src="../../scripts/libs/sweet-alert/js/sweet-alert.js"></script>
+    <script src="../../scripts/libs/angularjs/1.4.4/angular.min.js"></script>
+    <script src="../../scripts/libs/angularjs/1.4.4/angular-cookies.min.js"></script>
+    <script src="../../scripts/components/directives/fastmap-uikit-all.js"></script>
+    <script src="../../scripts/libs/jquery/jquery-1.11.1.js"></script>
+    <script src="./Application.js"></script>
+    <script src="./service/dataService.js"></script>
+    <script src="./service/dataService-manage.js"></script>
+    <script src="./loginCtrl.js"></script>
+</head>
+<body ng-controller="loginCtrl">
+<!-- main login part -->
+<div class="wrapper container">
+    <div class="backgroundImageDiv">
+        <div class="loginDiv">
+            <div style="font-size: 14px">
+                <!--<div class="company-logo"></div>-->
+                <login valid-type="1"></login>
             </div>
         </div>
-    </body>
+    </div>
+</div>
+</body>
 </html>
