--- a/apps/imeep/task/taskPage.html
+++ b/apps/imeep/task/taskPage.html
@@ -13,18 +13,28 @@
     <link rel="stylesheet" type="text/css" href="../../../styles/imeep/editor.css">
     <script type="text/javascript" src="../Application.js"></script>
     <style>
+        .banerTab{
+            color: #8F9AAD;
+        }
+        .banerTab.active{
+            color: #FFFFFF;
+        }
         .fm-taskSorter{
             padding: 0px 40px;
         }
-        .fm-taskSorter li a{
-            color: #3a8bbb;
+        .fm-taskSorter select{
+            width: 100px;
+            margin-top: 20px;
+            height: inherit;
+            font-size:12px;
+            padding: 3px 0 3px 6px;
+            appearance:none;
+            -moz-appearance:none; /* Firefox */
+            -webkit-appearance:none; /* Safari 和 Chrome */
         }
-        .fm-taskSorter .breadcrumb{
-            margin-top: 10px;
-            padding: 8px 0;
-        }
-        .fm-taskSorter .breadcrumb > li + li:before{
-            content: '';
+        .unactived{background: url(../../../images/main/task/icon-arrowup.png) no-repeat 80px 6px, url(../../../images/main/task/icon-arrowdown.png) no-repeat 80px 13px #fff;}
+        .actived{
+            background: url(../../../images/main/task/icon-arrowdown-red.png) no-repeat 80px 6px, url(../../../images/main/task/icon-arrowdown.png) no-repeat 80px 13px #fff;
         }
         .fm-taskDataList{
             padding: 0px 25px;
@@ -50,7 +60,13 @@
         .fm-taskDataList .taskItem .taskItem-heading{
             padding: 10px;
             color: #FFFFFF;
+            font-size: 14px;
             font-weight: bold;
+        }
+        .finishColor{
+            background-color: #16B8BE;
+        }
+        .unfinishColor{
             background-color: #5896FF;
         }
         .fm-taskDataList .taskItem .taskItem-body{
@@ -67,13 +83,24 @@
             width: 70%;
         }
         .taskItem:hover,
-        .taskItem:focus {
+        .taskItem:focus{
             background-color: #ffffff;
-            box-shadow:0 22px 43px rgba(0, 0, 0, 0.15);
-            -webkit-box-shadow:0 22px 43px rgba(0, 0, 0, 0.15);
-            color:#1A4C87;
-            -webkit-transform:translateY(-4px);
-            transform:translateY(-4px);
+            box-shadow:0 22px 45px rgba(0, 0, 0, 0.15);
+            -webkit-box-shadow:0 22px 45px rgba(0, 0, 0, 0.15);
+            /*color:#1A4C87;*/
+            /*-webkit-transform:translateY(-4px);*/
+            /*transform:translateY(-4px);*/
+            -moz-transform:none;
+        }
+        .taskItemTemp:hover,
+        .taskItemTemp:focus{
+            cursor: pointer;
+            background-color: #ffffff;
+            box-shadow:0 22px 45px rgba(0, 0, 0, 0.15);
+            -webkit-box-shadow:0 22px 45px rgba(0, 0, 0, 0.15);
+            /*color:#1A4C87;*/
+            /*-webkit-transform:translateY(-4px);*/
+            /*transform:translateY(-4px);*/
             -moz-transform:none;
         }
 
@@ -95,54 +122,53 @@
             </div>
         </div>
         <!-- main part -->
-        <div ui-layout-container class="fm-no-scroll">
+        <div ui-layout-container class="">
             <div ui-layout="{flow:'column',dividerSize:'0'}" ui-layout-loaded>
                 <!--sider bar-->
-                <div ui-layout-container class="fm-banner fadeInLeft fm-no-scroll" style="background-color: rgba(47, 47, 47, 0.980392)" size="60px">
-                    <button class="" style="width:100%;background-color: transparent;border: none;padding: 20px 0 0 0;" title="当前任务">
-                        <i class="fa fa-file-o fa-6" style="font-size: 2em;color: #FFFFFF;" aria-hidden="true"></i>
-                        <span class="clearfix"></span>
-                        <span style="display:block;color:white;padding:5px 0">当前任务</span>
+                <div ui-layout-container class="fm-banner fadeInLeft fm-no-scroll" style="background-color: #1F355A" size="60px">
+                    <button class="banerTab" ng-class="{1:'active'}[currentTab]" ng-click="tab1Url='../../../images/main/task/icon-c1.png';tab2Url='../../../images/main/task/icon-h2.png'" style="width:100%;background-color: transparent;border: none;padding: 20px 0 0 0;outline: none" title="当前任务">
+                        <img src="{{tab1Url}}" />
                     </button>
-                    <button class="" style="width:100%;background-color: transparent;border: none;padding: 20px 0 0 0;" title="当前任务">
-                        <i class="fa fa-file-text fa-6" style="font-size: 2em;color: #FFFFFF;" aria-hidden="true"></i>
-                        <span class="clearfix"></span>
-                        <span style="display:block;color:white;padding:5px 0">历史任务</span>
+                    <button class="banerTab" ng-class="{2:'active'}[currentTab]" ng-click="tab1Url='../../../images/main/task/icon-c2.png';tab2Url='../../../images/main/task/icon-h1.png'" style="width:100%;background-color: transparent;border: none;padding: 20px 0 0 0;outline: none" title="当前任务">
+                        <img src="{{tab2Url}}" />
                     </button>
                 </div>
                 <!--task data list-->
-                <div ui-layout-container class="fm-no-scroll">
+                <div ui-layout-container class="">
                     <div class="container-fluid taskDataList">
                         <div class="row fm-taskSorter">
-                            <ol class="breadcrumb ">
-                                <li><a href="#">任务名称</a></li>
-                                <li><a href="#">结束时间</a></li>
-                                <li><a href="#">完成进度</a></li>
-                                <li style="float: right"><a href="#"><span class="glyphicon glyphicon-th-large"></span></a></li>
-                                <li style="float: right"><a href="#"><span class="glyphicon glyphicon-th-list"></span></a></li>
-                            </ol>
+                            <select ng-model="myOption" ng-change="aaaa()" ng-click="hhh()" class="form-control {{redUp}}">
+                                <option value="0">默认</option>
+                                <option value="1">任务名称</option>
+                                <option value="2">完成时间</option>
+                                <option value="3">完成进度</option>
+                            </select>
                         </div>
 
                         <div class="row fm-taskDataList">
                             <div class="col-md-3 col-xs-6 col-sm-12" ng-repeat="item in currentSubTaskList">
                                 <div class="taskItem">
-                                    <div class="taskItem-heading">任务名称</div>
+                                    <div class="taskItem-heading" ng-class="{true:'finishColor',false:'unfinishColor'}[item.percent==100]">
+                                        <div style="float: left" ng-bind="'任务名称'"></div>
+                                        <button ng-if="item.percent==100" type="button" style="padding: 1px 15px;float: right;background: #6AD0A6;border: 1px solid #128D92;" class="btn clearfix">提交</button>
+                                        <div class="clearfix"></div>
+                                    </div>
                                     <div class="taskItem-body">
                                         <ul class="fm-ul ItemInfo">
                                             <li>
                                                 <div class="itemInfo-left"><label>完成进度：</label></div>
                                                 <div class="itemInfo-right">
-                                                    <div class="col-md-9"><uib-progressbar style="display: block;height: 15px" class="progress" value="item.percent" type="success"></uib-progressbar></div>
-                                                    <div class="col-md-3" ng-bind="'　'+item.percent+'%'"></div>
+                                                    <div class="col-md-9"><uib-progressbar style="display: block;height: 12px;background: #304455" class="progress" value="item.percent" type="success"></uib-progressbar></div>
+                                                    <div class="col-md-3" style="color: #6AD0A6" ng-bind="'　'+item.percent+'%'"></div>
                                                 </div>
                                             </li>
                                             <li>
                                                 <div class="itemInfo-left"><label>创建时间：</label></div>
-                                                <div class="itemInfo-right" ng-bind="item.planStartDate"></div>
+                                                <div class="itemInfo-right" ng-bind="'2016-10-1'"></div>
                                             </li>
                                             <li>
                                                 <div class="itemInfo-left"><label>结束时间：</label></div>
-                                                <div class="itemInfo-right" ng-bind="item.planEndDate"></div>
+                                                <div class="itemInfo-right" ng-bind="'2016-10-28'"></div>
                                             </li>
                                             <li>
                                                 <div class="itemInfo-left"><label style="letter-spacing: 1px;">任 务 量：</label></div>
@@ -158,6 +184,63 @@
                                             </li>
                                         </ul>
                                     </div>
+                                </div>
+                            </div>
+
+                            <!-- -->
+                            <div class="col-md-3 col-xs-6 col-sm-12" ng-repeat="item in currentSubTaskList">
+                                <div class="taskItem">
+                                    <div class="taskItem-heading" ng-class="{true:'finishColor',false:'unfinishColor'}[item.percent==100]">
+                                        <div style="float: left" ng-bind="'任务名称'"></div>
+                                        <button ng-if="item.percent==100" type="button" style="padding: 1px 15px;float: right;background: #6AD0A6;border: 1px solid #128D92;" class="btn clearfix">提交</button>
+                                        <div class="clearfix"></div>
+                                    </div>
+                                    <div class="taskItem-body">
+                                        <ul class="fm-ul ItemInfo">
+                                            <li>
+                                                <div class="itemInfo-left"><label>完成进度：</label></div>
+                                                <div class="itemInfo-right">
+                                                    <div class="col-md-9"><uib-progressbar style="display: block;height: 12px;background: #304455" class="progress" value="item.percent" type="success"></uib-progressbar></div>
+                                                    <div class="col-md-3" style="color: #6AD0A6" ng-bind="'　'+item.percent+'%'"></div>
+                                                </div>
+                                            </li>
+                                            <li>
+                                                <div class="itemInfo-left"><label>创建时间：</label></div>
+                                                <div class="itemInfo-right" ng-bind="'2016-10-1'"></div>
+                                            </li>
+                                            <li>
+                                                <div class="itemInfo-left"><label>结束时间：</label></div>
+                                                <div class="itemInfo-right" ng-bind="'2016-10-28'"></div>
+                                            </li>
+                                            <li>
+                                                <div class="itemInfo-left"><label style="letter-spacing: 1px;">任 务 量：</label></div>
+                                                <div class="itemInfo-right">200个POI，100条tips</div>
+                                            </li>
+                                            <li>
+                                                <div class="itemInfo-left"><label>类　　型：</label></div>
+                                                <div class="itemInfo-right">日一体化任务</div>
+                                            </li>
+                                            <li>
+                                                <div class="itemInfo-left"><label style="letter-spacing: 1px;">作 业 季：</label></div>
+                                                <div class="itemInfo-right">2016年秋</div>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="taskItemTemp" ng-if="$index==0" style="position: relative;width: 280px;height: 230px;top: -235px;left: 15px;background: #fff;z-index: 1;opacity: 0.9;">
+                                    <div style="padding: 50px;font-size: 20px;color: #e83b68;">
+                                        <p style="font-size: 20px;">存在8条错误数据</p>
+                                        <p style="letter-spacing: 1px">请修改后在提交！</p>
+                                        <p style="font-size: 20px;padding: 20px;">任务提交失败</p>
+                                    </div>
+                                </div>
+                                <div class="taskItemTemp" ng-if="$index==1" style="position: relative;width: 280px;height: 230px;top: -235px;left: 15px;background: #fff;z-index: 1;opacity: 0.9;">
+                                    <img style="padding: 40px 0 10px 0;" class="center-block" src="../../../images/main/task/sub-percent.png" />
+                                    <p style="text-align: center; font-size: 15px;font-weight: bold">任务提交中，预计需要三分钟</p>
+                                </div>
+                                <div class="taskItemTemp" ng-if="$index==2" style="position: relative;width: 279px;height: 230px;top: -235px;left: 15px;background: #fff;z-index: 1;opacity: 0.9;">
+                                    <img style="padding: 40px 0 10px 0;" class="center-block" src="../../../images/main/task/sub-succ.png" />
+                                    <p style="text-align: center; font-size: 15px;font-weight: bold">任务提交成功</p>
                                 </div>
                             </div>
                         </div>
