--- a/apps/imeep/editor/editor.html
+++ b/apps/imeep/editor/editor.html
@@ -38,10 +38,10 @@
             <div class="fm-top" style="left:0px;width:60px;text-align:center;">
                 <img src="../../../images/main/fm-logo.png">
             </div>
-            <div class="fm-top" style="left:60px;right:200px;position:fixed;">
+            <div class="fm-top" style="left:60px;right:200px;position:fixed;min-width:1100px;">
                 <div ng-include="editorToolbarTpl"></div>
             </div>
-            <div class="fm-top" style="width:260px;right:0px;text-align:right;padding:0px 25px;">
+            <div class="fm-top" style="width:208px;right:0px;text-align:right;padding:0px 25px;">
                 <button class="fm-top-right-btn profile" title="个人信息"></button>
                 <button class="fm-top-right-btn notice" title="我的消息"></button>
                 <button class="fm-top-right-btn logout" title="返回任务列表" ng-click="goback()"></button>
